--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -23,9 +23,22 @@ spring:
     jackson:
         serialization.indent_output: true
     datasource:
+        initialize: false
         online:
             type: com.zaxxer.hikari.HikariDataSource
             url: jdbc:mysql://localhost:3306/online?useUnicode=true&characterEncoding=utf8&useSSL=false
+            name:
+            username: root
+            password: root
+            hikari:
+                data-source-properties:
+                    cachePrepStmts: true
+                    prepStmtCacheSize: 250
+                    prepStmtCacheSqlLimit: 2048
+                    useServerPrepStmts: true
+        draft:
+            type: com.zaxxer.hikari.HikariDataSource
+            url: jdbc:mysql://localhost:3306/draft?useUnicode=true&characterEncoding=utf8&useSSL=false
             name:
             username: root
             password: root
